--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -3,7 +3,6 @@
         <div class="container_title">
             <h1 class="text_main text_white"> GamesList</h1>
             <img src="../assets/Asset 1.svg" class="add" (click)="showGameList()" alt="add game">
-            <h2 class="text_white text_main btn_compare">Compare</h2>
             <img src="../assets/Asset 3.svg" (click)="gameListOff()" alt="" class="img_close">
         </div>
         <!-- GameList -->
@@ -17,7 +16,6 @@
                 <!-- </div> -->
             </div>
         </div>
-
     </div>
 </div>
 <!-- Game Detail -->
@@ -31,58 +29,58 @@
         </div>
         <div class="gameDetail" *ngIf="gameDetailDetail">
             <div>
-                <label for="GameDescript" class="text_main text_white detail_label">Game Info</label>
+                <div class="text_body text_white detail_label">Game Info</div>
                 <p class="text_body">{{selectedGame.GameDescript}}</p>
             </div>
             <div>
-                <label for="additional" class="text_main text_white detail_label">Additonal notes</label>
+                <div class="text_body text_white detail_label">Additonal notes</div>
                 <p class="text_body">{{selectedGame.additional}}</p>
             </div>
             <div>
-                <label for="date" class="text_main text_white detail_label">Date Added</label>
+                <div class="text_body text_white detail_label">Date Added</div>
                 <p class="text_body">{{selectedGame.date}}</p>
             </div>
             <div>
-                <label for="rules" class="text_main text_white detail_label">Rules</label>
+                <div class="text_body text_white detail_label">Rules</div>
                 <p class="text_body">{{selectedGame.rules}}</p>
             </div>
             <div>
-                <label for="creator" class="text_main text_white detail_label">Created by</label>
+                <div class="text_body text_white detail_label">Created by</div>
                 <p class="text_body">{{selectedGame.creator}}</p>
             </div>
             <div>
-                <label for="numOfPlay" class="text_main">Number of players</label>
+                <div class="text_main text_white detail_label">Number of players</div>
                 <p class="text_body">{{selectedGame.numOfPlay}} players</p>
             </div>
         </div>
         <div class="gameEdit" *ngIf="gameDetailEdit">
             <form (ngSubmit)="editNewGame(e)" #e="ngForm" class="form-grid">
                 <div class="form-group">
-                    <label for="GameName" class="text_body">Name of game</label>
+                    <div class="text_main text_white detail_label"><label for="GameName" class="text_body">Name of game</label></div>
                     <input type="text" name="GameName" [ngModel]="selectedGame.GameName">
                 </div>
                 <div class="form-group">
-                    <label for="GameDescript" class="text_body">Game Info</label>
+                    <div class="text_main text_white detail_label"><label for="GameDescript" class="text_body">Game Info</label></div>
                     <textarea rows="15" name="GameDescript" [ngModel]="selectedGame.GameDescript"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="additional" class="text_body">Additonal notes</label>
+                    <div class="text_main text_white detail_label"><label for="additional" class="text_body">Additonal notes</label></div>
                     <textarea rows="15" name="additional" class="additional" [ngModel]="selectedGame.additional"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="date" class="text_body">Date Added</label>
+                    <div class="text_main text_white detail_label"><label for="date" class="text_body">Date Added</label></div>
                     <input type="date" name="date" class="date" [ngModel]="selectedGame.date">
                 </div>
                 <div class="form-group">
-                    <label for="rules" class="text_body">Rules</label>
+                    <div class="text_main text_white detail_label"> <label for="rules" class="text_body">Rules</label></div>
                     <textarea rows="15" name="rules" class="rules" [ngModel]="selectedGame.rules"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="creator" class="text_body">Created by</label>
+                    <div class="text_main text_white detail_label"><label for="creator" class="text_body">Created by</label></div>
                     <input type="text" name="creator" class="creator" [ngModel]="selectedGame.creator">
                 </div>
                 <div class="form-group">
-                    <label for="numOfPlay" class="text_body">Number of players</label>
+                    <div class="text_main text_white detail_label"><label for="numOfPlay" class="text_body">Number of players</label></div>
                     <input type="text" name="numOfPlay" class="numOfPlay" [ngModel]="selectedGame.numOfPlay">
                 </div>
                 <div class="container_btn">
@@ -97,37 +95,37 @@
     <div class="container_overlay_newGame">
         <div class="container_content_newGame">
             <div class="container_title_newGame">
-                <h1 class="text_main text_white"> Add game</h1>
+                <h1 class="text_main "> Add game</h1>
                 <img src="../assets/Asset 3.svg" (click)="showGameList()" alt="" class="img_close">
             </div>
             <div class="container_input">
                 <form (ngSubmit)="addNewGame(f)" #f="ngForm" class="form-grid">
                     <div class="form-group name">
-                        <label for="gameName" class="text_body text_white">Name of Game</label>
+                        <div class="text_main text_white detail_label"><label for="gameName" class="text_body ">Name of Game</label></div>
                         <input type="text" name="GameName" class="text_body gameName" ngModel>
                     </div>
                     <div class="form-group">
-                        <label for="GameDescript" class="text_body text_white">Game Info</label>
+                        <div class="text_main text_white detail_label"><label for="GameDescript" class="text_body ">Game Info</label></div>
                         <textarea rows="15" name="GameDescript" class="gameDescript" ngModel></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="additional" class="text_body text_white">Additonal notes</label>
+                        <div class="text_main text_white detail_label"><label for="additional" class="text_body ">Additonal notes</label></div>
                         <textarea rows="15" name="additional" class="additional" ngModel></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="date" class="text_body text_white">Date Added</label>
+                        <div class="text_main text_white detail_label"><label for="date" class="text_body ">Date Added</label></div>
                         <input type="date" name="date" class="date" ngModel>
                     </div>
                     <div class="form-group">
-                        <label for="rules" class="text_body text_white">Rules</label>
+                        <div class="text_main text_white detail_label"><label for="rules" class="text_body">Rules</label></div>
                         <textarea rows="15" name="rules" class="rules" ngModel></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="creator" class="text_body text_white">Created by</label>
+                        <div class="text_main text_white detail_label"><label for="creator" class="text_body">Created by</label></div>
                         <input type="text" name="creator" class="creator" ngModel>
                     </div>
                     <div class="form-group">
-                        <label for="numOfPlay" class="text_body text_white">Date Added</label>
+                        <div class="text_main text_white detail_label"><label for="numOfPlay" class="text_body">Number of players</label></div>
                         <input type="text" name="numOfPlay" class="numOfPlay" ngModel>
                     </div>
                     <div class="container_btn">
