--- a/src/app/log-sign/log-sign.component.html
+++ b/src/app/log-sign/log-sign.component.html
@@ -22,7 +22,7 @@
                             <button class="btn_align text_main" type="submit">Login</button>
                         </div>
                     </form>
-                    <p (click)="showAlts()" class="Altsign_resize text_body">Signin with alternatives</p>
+                    <p (click)="showAlts()" class="Altsign_resize text_body">Login with alternatives</p>
                 </div>
                 <div [@fadeInOut]="Signup ? 'fadeIn' : 'fadeOut'" class="signup">
                     <form class="form-control-sign" (ngSubmit)="signSubmit(sign)" #sign="ngForm">
