--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -6,7 +6,6 @@
         </div>
         <div class="nav_spash_right">
             <a class="nav text_body" (click)="scrollTolFeature()">Features</a>
-            <a class="nav text_body" routerLink="../LogSign">picks</a>
             <a class="nav text_body" routerLink="../LogSign">signup</a>
 
             <div class="log_box">
@@ -20,7 +19,7 @@
             <div class="top_shape_text">
                 <h1 class="text_main big">Gamebox</h1>
                 <div class="line"></div>
-                <p class="text_main center">Create events on the fly</p>
+                <p class="text_main center">Your boardgames in one place</p>
 
             </div>
             <img src="../assets/Asset 11.svg" class="big_img">
@@ -29,9 +28,9 @@
     <div class="splash_feature_container" id="splash_feature_container">
         <p class="text_main big_alt">Features</p>
         <div class="text_points">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis explicabo laborum voluptatibus sint, corrupti maiores tempora a asperiores. Mollitia repellendus tempora illum non ipsa commodi, provident quod magni amet ipsam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis explicabo laborum voluptatibus sint, corrupti maiores tempora a asperiores. Mollitia repellendus tempora illum non ipsa commodi, provident quod magni amet ipsam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis explicabo laborum voluptatibus sint, corrupti maiores tempora a asperiores. Mollitia repellendus tempora illum non ipsa commodi, provident quod magni amet ipsam.</p>
+            <p class="text_body feature_point">Game box's gamelist allows you to keep up with tout collection, offering the ability to hold info about your games , both retail and homebrew.</p>
+            <p class="text_body">Gamebox's friend ststem allows you to connect with friends and sty up today with there events.</p>
+            <p class="text_body">Create events with Gamebox's event system.Events that you create are shared with your friends.</p>
 
         </div>
     </div>
