--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -100,7 +100,7 @@
 .account_main {
     width: 100%;
     height: 100%;
-    display: none;
+    display: grid;
     grid-template-rows: 50% 50%;
     grid-template-columns: 50% 50%;
 }
@@ -110,11 +110,12 @@
 }
 
 .account_friend {
-    width: 100%;
+    width: 90%;
     height: 100%;
     display: grid;
     grid-template-rows: 50% 50%;
     grid-template-columns: 50% 50%;
+    margin: auto;
 }
 
 .btn_delete {
