--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -69,7 +69,7 @@
 
 .playing {
     width: 100%;
-    height: 6em;
+    height: 7em;
     margin-left: 1em;
     margin-right: 1em;
     background-color: #4F345A;
@@ -81,7 +81,7 @@
 }
 
 .EventDescript {
-    grid-column: 1/2;
+    grid-column: 1;
     grid-row: 2;
 }
 
@@ -98,6 +98,13 @@
 .EventCreator {
     grid-row: 2;
     grid-column: 3;
+}
+
+.EventGames {
+    grid-row: 2;
+    grid-column: 2;
+    margin: 0;
+    overflow-y: scroll;
 }
 
 .nav-splash {
@@ -136,9 +143,8 @@
 
 .log_box {
     background-color: #662D91;
-    height: 50%;
+    height: 23px;
     margin-left: 5px;
-    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -275,21 +281,29 @@ input:checked+.slider:before {
 
 .FriendsList {
     display: flex;
-    position: fixed;
+    position: absolute;
     flex-direction: column;
     align-items: center;
     width: 20em;
     height: 10em;
     background-color: #4F345A;
     z-index: 30;
-    top: 3em;
-    right: 13em;
-    box-shadow: 0px 2px 3px;
+    box-shadow: 0px 2px 3px #000000;
+}
+
+.friendlist_container {
+    position: relative;
+    display: inline-block;
+}
+
+.notification_container {
+    position: relative;
+    display: inline-block;
 }
 
 .notifcations_dropdown {
     display: flex;
-    position: fixed;
+    position: absolute;
     flex-direction: column;
     align-items: center;
     width: 24em;
@@ -297,7 +311,6 @@ input:checked+.slider:before {
     background-color: #4F345A;
     z-index: 30;
     box-shadow: 0px 2px 3px;
-    top: 8%;
 }
 
 .Friend {
@@ -323,7 +336,7 @@ input:checked+.slider:before {
 
 .container_friend_Detail {
     width: 55%;
-    height: 30em;
+    height: 5em;
     z-index: 12;
     background-color: #4F345A;
 }
@@ -373,7 +386,43 @@ input:checked+.slider:before {
 
 .btn_refresh {
     border-style: none;
-    background-color: #29ABE2;
+    background-color: #662D91;
     height: 2em;
     margin-left: 10px;
+}
+
+.btn_refresh:hover {
+    background-color: #29ABE2;
+    transition: 0.3s;
+}
+
+.btn_friend {
+    border-style: none;
+    margin: 1px;
+}
+
+.accept {
+    background-color: #29ABE2;
+}
+
+.decline {
+    background-color: rgb(189, 64, 64);
+}
+
+.btn_blue {
+    background-color: #29ABE2;
+    border-style: none;
+    color: #FFFFFF;
+    width: 8em;
+    font-size: 12pt;
+}
+
+.friendAddBar {
+    height: 3em;
+    display: inline-flex
+}
+
+.friendInput {
+    width: 25em;
+    font-size: 18pt;
 }
