--- a/src/app/splash/splash.component.css
+++ b/src/app/splash/splash.component.css
@@ -38,7 +38,7 @@
     align-items: center;
     position: absolute;
     z-index: 8;
-    width: 50em;
+    width: 57em;
     ;
 }
 
@@ -56,6 +56,7 @@
     text-align: center;
     color: #FFFFFF;
     padding: 0;
+    margin: 0;
 }
 
 .big_alt {
@@ -150,8 +151,9 @@
 
 .center {
     text-align: center;
-    font-size: 20pt;
+    font-size: 30pt;
     color: #FFFFFF;
+    margin: 0;
 }
 
 .call_button {
@@ -165,6 +167,11 @@
     font-family: 'Sansita', sans-serif;
 }
 
+.call_button:hover {
+    background-color: #29ABE2;
+    transition: 0.3s;
+}
+
 .text_points {
     margin-left: 70px;
     margin-right: 70px;
@@ -174,4 +181,9 @@
     text-decoration: none;
     color: #FFFFFF;
     font-size: 18pt;
+}
+
+.log_box:hover {
+    background-color: #29ABE2;
+    transition: 0.3s;
 }
