--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -311,6 +311,7 @@ input:checked+.slider:before {
     background-color: #4F345A;
     z-index: 30;
     box-shadow: 0px 2px 3px;
+    right: 1em;
 }
 
 .Friend {
@@ -425,4 +426,8 @@ input:checked+.slider:before {
 .friendInput {
     width: 25em;
     font-size: 18pt;
+}
+
+.shorten {
+    font-size: 11pt;
 }
